--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Neurolab</title>
+    <title>Neurolab Web</title>
+    
     <meta name="description" content="Neurolab Web Platform" />
     <meta name="author" content="Neurolab" />
 
@@ -13,6 +14,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Neurolab" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png">
   </head>
 
   <body>
